# cv-workbench

./: .DESKTOP-Todds-Yoga-7-151TL5-jpeg.txt.swp  .LAPTOP-UDSHLQKC-jpeg.txt.swp  .gitignore  BUILD.md  CMakeLists-win.txt  CMakeLists.txt  DESKTOP-Todds-Yoga-7-151TL5-jpeg.txt  Doxyfile  INSTALL-cmake.md  INSTALL.md  LAPTOP-UDSHLQKC-jpeg.txt  NOTES.md  README.md  README1.md  TASKS.md  TODO.md  VERSIONS.md  build.sh  cv-workbench.accdb  cv-workbench.db  cv-workbench.docx  cv-workbench.sql  cv-workbench.ump  doxy.sh  doxygen.config  find-jpeg.sh  run.sh  todo.txt  win_build.txt  workbench.docx  ~$rkbench.docx  ~WRL0005.tmp  ~WRL1034.tmp
archive/: 2022-05-13a.db  Doc1.docx  clip_sutherland.cpp  experiment-square45-90-sobel-map-to-jpeg.json  file_utils_C.h  image-test.cpp  image_buffer_32F.hpp  json-parameters-old.cpp  json_parser_example.c  makefile.json  parse_experiment_old.cpp  square.jpg.final.sh  textUtils.cpp  textUtils.hpp
cmake/module/: FindJSON-C.cmake
config/: .gitignore  README.md  a.c  definition-filter-edge-sobel-1.json  exp_sobel1.json  experiment-du-definition.json  experiment-du-drone.json  experiment-du-map.json  experiment-sobel-jpeg-to-jpeg-definition.json  experiment-square-definition.json  experiment-square45-90-definition.json  experiment-square45-90-sobel-hough.json  experiment-square45-90-sobel-hough_lines.json  experiment-square45-90-sobel-hough_lines_bin.json  experiment-square45-90-sobel-map-to-jpeg.json  experiment-square45-definition.json  experiment1-definition.dump.json  experiment1-definition.json  experiment2-definition.json  experiment3-definition.json  experiment4-definition.json  experiment5-definition.json  experiment6-definition.json  experiment7-definition.json  experiment8-definition.json  experiment9-definition.json  experiment9-prewitt-definition.json  experiment9-roberts-definition.json  experiment9-sobel-definition.json  experiment9-sobel-orientation-0-definition.json  experiment9-sobel-orientation-90-definition.json  file_utils.c  file_utils_cpp.cpp  filter-edge-sobel-template.json  image-data-descriptor-template.json  json.cpp  makefile  parse_template  parse_template.c  read_file.c  (+10 more)
config/sandbox/: a.txt  json-new00.c  json-parameters  json-parameters-bak.cpp  json-parameters.cpp  makefile  operator_request.json  struct.c  template-filter-edge-sobel.json  template-schema.json  template-sobel.json  template.json
config/x/: json-parameters  json-template.cpp  json-test.c  makefile  test.json
cv-lib/: CMakeLists.txt  berkeley_db_data_source_descriptor.cpp  berkeley_db_data_source_descriptor.hpp  bounds.cpp  bounds.hpp  data.cpp  data.hpp  data_source_descriptor.cpp  data_source_descriptor.hpp  errors.cpp  errors.hpp  experiment.cpp  experiment.hpp  experiment_step.cpp  experiment_step.hpp  file_utils.cpp  file_utils.hpp  filesystem_data_source_descriptor.cpp  filesystem_data_source_descriptor.hpp  histogram.cpp  histogram.hpp  hough.cpp  hough.hpp  hough_accum.cpp  hough_accum.hpp  hough_peak.cpp  hough_peak.hpp  image.cpp  image.hpp  image_depth.cpp  image_depth.hpp  image_frame.cpp  image_frame.hpp  image_header.cpp  image_header.hpp  image_line_segment.cpp  image_line_segment.hpp  internet_data_source_descriptor.cpp  internet_data_source_descriptor.hpp  kernel.cpp  (+106 more)
db/: cv-workbench.ddl.sql
db/berkeley/: .gitignore  example_database_load  example_database_read  vendorDB.db
db/sql/: cv-workbench.ddl.sql  data-2022-05-13.sql
demo/: README.txt
doc/: .gitignore  Clips a polar line against a window and returns a line segment from the endpoints.docx  README.txt  convolution sizes.xlsx  cv-workbench (LAPTOP-UDSHLQKC's conflicted copy 2022-08-17).docx  cv-workbench - current.docx  cv-workbench manual.docx  cv-workbench manual1.docx  cv-workbench manual2.docx  cv-workbench v0.1.docx  cv-workbench-manual.docx  cv-workbench.docx  cv-workbench.drawio  hough created.xlsx  hough.drawio  rotate.xlsx  trig.xlsx  ~WRL0003.tmp  ~WRL0604.tmp  ~WRL1916.tmp  ~WRL2976.tmp
doc/backup/: convolution sizes.xlsx  dda.xlsx
doc/workbench demonstration v0.2/: cv-workbench v0.2.docx  test-filter-edge-sobel-0-degrees.json
docs/: hough created.xlsx  hough.xlsx
examples/: makefile
examples/c/: .gitignore  conv-wb.cpp  conv.4-6-3-3-wb.txt  conv.4-6-3-3.txt  conv.4-7-3-3-wb.txt  conv.4-7-3-3.txt  conv.5-6-3-3-wb.txt  conv.5-6-3-3.txt  conv.5-6-4-3-wb.txt  conv.5-6-4-3.txt  conv.5-7-3-3-wb.txt  conv.5-7-3-3.txt  conv.cpp  data-types  data-types.cpp  map  (+19 more)
samples/: clean.sh  run.sh  todo-2025-05-29.txt
save/: e.json  gen-trig.cpp  image_buffer.cpp  image_buffer_32F.cpp  image_buffer_8U.cpp  image_buffer_8U.hpp  json-parameters.cpp  json-test.c  makefile.opencv  operator_template.cpp  operator_template.hpp  parse_template.cpp  parse_template_C.c  read_file.c
src/: .gitignore  .gitignore (LAPTOP-UDSHLQKC's conflicted copy 2022-06-19)  320x240gray_exp4_bin.binary  320x240gray_sobel_orientation_0.bin.hist.gp  320x240gray_sobel_orientation_0.bin.hist.txt  320x240gray_sobel_orientation_0.bin.hist.txt.bak  320x240gray_sobel_orientation_0.bin.hough.txt  320x240gray_sobel_orientation_0.bin.hough.txt.bak  320x240gray_sobel_orientation_0.bin.hough.xlsx  320x240gray_sobel_orientation_0.bin.stats.txt  320x240gray_sobel_orientation_0.bin.txt  320x240gray_sobel_orientation_0.bin.xlsx  320x240gray_sobel_orientation_90.bin.hist.gp  320x240gray_sobel_orientation_90.bin.hist.txt  320x240gray_sobel_orientation_90.bin.stats.txt  CMakeLists.txt1  DESKTOP-Todds-Yoga-7-151TL5-cv-workbench-ldd.txt  DESKTOP-Todds-Yoga-7-151TL5-image-info-ldd.txt  Data_source_descriptor.cpp  Data_source_descriptor.hpp  Histogram.cpp  Histogram.hpp  Hough.cpp  Hough.hpp  Image.cpp  Image.hpp  LAPTOP-UDSHLQKC-image-info-ldd.txt  Makefile  Makefile.bak  README  README.md  TASKS.md  VERSIONS.md  berkeley_db_data_source_descriptor.cpp  berkeley_db_data_source_descriptor.hpp  bounds.cpp  bounds.hpp  cv-workbench  cv-workbench.cpp  cv-workbench.sln  (+282 more)
template/: .gitignore  file_utils.cpp  json.cpp  makefile  operator_template.hpp
test/: .gitignore  Makefile  pixel_map_test  pixel_map_test.cpp
(+1107 files in other folders)
