add_library(cv-lib STATIC
        berkeley_db_data_source_descriptor.cpp
        berkeley_db_data_source_descriptor.hpp
        bounds.cpp
        bounds.hpp
        data_source_descriptor.cpp
        data_source_descriptor.hpp
        data.cpp
        data.hpp
        errors.cpp
        errors.hpp
        experiment.cpp
        experiment.hpp
        experiment_step.cpp
        experiment_step.hpp
        filesystem_data_source_descriptor.cpp
        filesystem_data_source_descriptor.hpp
        file_utils.cpp
        file_utils.hpp
        histogram.cpp
        histogram.hpp
        hough.cpp
        hough.hpp
        hough_peak.cpp
        hough_peak.hpp
        image.cpp
        image_depth.cpp
        image_depth.hpp
        image_header.cpp
        image_header.hpp
        image.hpp
        image_line_segment.cpp
        image_line_segment.hpp
        internet_data_source_descriptor.cpp
        internet_data_source_descriptor.hpp
        kernel.cpp
        kernel.hpp
        line_segment.cpp
        line_segment.hpp
        morphology.cpp
        morphology.hpp
        one_pass_mean.cpp
        one_pass_mean.hpp
        operator.cpp
        operator_dispatcher.cpp
        operator_dispatcher.hpp
        operator_filter_edge_color.cpp
        operator_filter_edge_color.hpp
        operator_filter_edge_kirsch.cpp
        operator_filter_edge_kirsch.hpp
        operator_filter_edge_laplacian.cpp
        operator_filter_edge_laplacian.hpp
        operator_filter_edge_prewitt.cpp
        operator_filter_edge_prewitt.hpp
        operator_filter_edge_roberts.cpp
        operator_filter_edge_roberts.hpp
        operator_filter_edge_sobel.cpp
        operator_filter_edge_sobel.hpp
        operator_filter_image_morphology.cpp
        operator_filter_image_morphology.hpp
        operator_filter_smooth_average.cpp
        operator_filter_smooth_average.hpp
        operator_filter_smooth_gaussian.cpp
        operator_filter_smooth_gaussian.hpp
        operator_filter_smooth_median.cpp
        operator_filter_smooth_median.hpp
        operator_histogram_hough_create.cpp
        operator_histogram_hough_create.hpp
        operator_histogram_image_create.cpp
        operator_histogram_image_create.hpp
        operator_histogram_peak_detect.cpp
        operator_histogram_peak_detect.hpp
        operator_hough_draw_line.cpp
        operator_hough_draw_line.hpp
        operator_hough_image_create.cpp
        operator_hough_image_create.hpp
        operator_hough_peak_detect.cpp
        operator_hough_peak_detect.hpp
        operator.hpp
        operator_transform_image_combine.cpp
        operator_transform_image_combine.hpp
        operator_transform_image_copy.cpp
        operator_transform_image_copy.hpp
        operator_transform_image_create.cpp
        operator_transform_image_create.hpp
        operator_transform_image_resize.cpp
        operator_transform_image_resize.hpp
        operator_transform_image_subtract.cpp
        operator_transform_image_subtract.hpp
        operator_transform_intensity_map.cpp
        operator_transform_intensity_map.hpp
        operator_transform_intensity_convert.cpp
        operator_transform_intensity_convert.hpp
        operator_utils.cpp
        operator_utils.hpp
        pearsons_correlation.cpp
        pearsons_correlation.hpp
        pixel.cpp
        pixel.hpp
        point.cpp
        point.hpp
        polar_trig.cpp
        polar_trig.hpp
        polar_trig_static.hpp
        runtime.cpp
        runtime.hpp
        variance_stats.cpp
        variance_stats.hpp
        wb_convert_types.cpp
        wb_convert_types.hpp
        wb_data_format.cpp
        wb_data_format.hpp
        wb_data_type.cpp
        wb_data_type.hpp
        wb_defs.hpp
        wb_filename.cpp
        wb_filename.hpp
        wb_json_utils.cpp
        wb_json_utils.hpp
        wb_log.cpp
        wb_log.hpp
        wb_morphology_types.cpp
        wb_morphology_types.hpp
        wb_repository_types.cpp
        wb_repository_types.hpp
        wb_resize_types.cpp
        wb_resize_types.hpp
        wb_utils.cpp
        wb_utils.hpp
        wb_version.hpp
        wb_window.cpp
        wb_window.hpp
)
target_include_directories(cv-lib PUBLIC .)
